--- a/projects/shuno.html
+++ b/projects/shuno.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
@@ -14,26 +14,52 @@
     />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://aurel1407.github.io/portfolio/projects/shuno.html" />
+    <link
+      rel="canonical"
+      href="https://aurel1407.github.io/portfolio/projects/shuno.html"
+    />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article" />
     <meta property="og:locale" content="fr_FR" />
-    <meta property="og:title" content="Shu-no - Plateforme de Réservation | Aurélien Thébault" />
-    <meta property="og:description" content="Plateforme de réservation de gîtes en Bretagne développée en React, TypeScript, Node.js et Express avec système de réservation et gestion utilisateurs" />
-    <meta property="og:url" content="https://aurel1407.github.io/portfolio/projects/shuno.html" />
-    <meta property="og:image" content="https://aurel1407.github.io/portfolio/images/shuno-logo.svg" />
+    <meta
+      property="og:title"
+      content="Shu-no - Plateforme de Réservation | Aurélien Thébault"
+    />
+    <meta
+      property="og:description"
+      content="Plateforme de réservation de gîtes en Bretagne développée en React, TypeScript, Node.js et Express avec système de réservation et gestion utilisateurs"
+    />
+    <meta
+      property="og:url"
+      content="https://aurel1407.github.io/portfolio/projects/shuno.html"
+    />
+    <meta
+      property="og:image"
+      content="https://aurel1407.github.io/portfolio/images/shuno-logo.svg"
+    />
     <meta property="og:site_name" content="Aurélien Thébault Portfolio" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Shu-no - Plateforme de Réservation" />
-    <meta name="twitter:description" content="Plateforme de réservation de gîtes développée en React et Node.js" />
-    <meta name="twitter:image" content="https://aurel1407.github.io/portfolio/images/shuno-logo.svg" />
+    <meta
+      name="twitter:description"
+      content="Plateforme de réservation de gîtes développée en React et Node.js"
+    />
+    <meta
+      name="twitter:image"
+      content="https://aurel1407.github.io/portfolio/images/shuno-logo.svg"
+    />
 
-    <title>Shu-no | Plateforme Réservation React, Node.js, PostgreSQL | Aurélien Thébault</title>
+    <title>
+      Shu-no | Plateforme Réservation React, Node.js, PostgreSQL | Aurélien
+      Thébault
+    </title>
 
     <!-- Favicon -->
+    <link rel="icon" type="image/png" href="../images/brand/favicon.png?v=2" />
+    <link rel="shortcut icon" href="../images/brand/favicon.png?v=2" />
     <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -80,7 +106,13 @@
           "name": "Aurélien Thébault",
           "url": "https://aurel1407.github.io/portfolio/"
         },
-        "programmingLanguage": ["React", "TypeScript", "Node.js", "Express", "JavaScript"],
+        "programmingLanguage": [
+          "React",
+          "TypeScript",
+          "Node.js",
+          "Express",
+          "JavaScript"
+        ],
         "datePublished": "2024"
       }
     </script>
@@ -110,7 +142,8 @@
           }
         ]
       }
-    </script>  </head>
+    </script>
+  </head>
 
   <body class="bg-gray-50 font-sans">
     <!-- Navigation -->
@@ -121,9 +154,15 @@
         <div class="flex justify-between items-center h-16">
           <a
             href="../index.html"
-            class="text-2xl font-bold text-gray-400 hover:text-white transition-colors"
-            >AT</a
+            class="inline-flex items-center"
+            aria-label="Retour au portfolio"
           >
+            <img
+              src="../images/brand/logo-nom.png"
+              alt="Auvielno"
+              class="h-10 w-auto object-contain"
+              loading="eager"
+          /></a>
           <a
             href="../index.html#projects"
             class="text-gray-300 hover:text-white transition-colors"
