--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
@@ -14,26 +14,52 @@
     />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://aurel1407.github.io/portfolio/projects/portfolio.html" />
+    <link
+      rel="canonical"
+      href="https://aurel1407.github.io/portfolio/projects/portfolio.html"
+    />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article" />
     <meta property="og:locale" content="fr_FR" />
-    <meta property="og:title" content="Portfolio Professionnel | Aurélien Thébault" />
-    <meta property="og:description" content="Site portfolio professionnel développé avec HTML5, Tailwind CSS et JavaScript avec design moderne et animations fluides" />
-    <meta property="og:url" content="https://aurel1407.github.io/portfolio/projects/portfolio.html" />
-    <meta property="og:image" content="https://aurel1407.github.io/portfolio/images/profile-photo.jpg" />
+    <meta
+      property="og:title"
+      content="Portfolio Professionnel | Aurélien Thébault"
+    />
+    <meta
+      property="og:description"
+      content="Site portfolio professionnel développé avec HTML5, Tailwind CSS et JavaScript avec design moderne et animations fluides"
+    />
+    <meta
+      property="og:url"
+      content="https://aurel1407.github.io/portfolio/projects/portfolio.html"
+    />
+    <meta
+      property="og:image"
+      content="https://aurel1407.github.io/portfolio/images/profile-photo.jpg"
+    />
     <meta property="og:site_name" content="Aurélien Thébault Portfolio" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Portfolio Professionnel" />
-    <meta name="twitter:description" content="Site portfolio développé avec HTML, CSS et JavaScript" />
-    <meta name="twitter:image" content="https://aurel1407.github.io/portfolio/images/profile-photo.jpg" />
+    <meta
+      name="twitter:description"
+      content="Site portfolio développé avec HTML, CSS et JavaScript"
+    />
+    <meta
+      name="twitter:image"
+      content="https://aurel1407.github.io/portfolio/images/profile-photo.jpg"
+    />
 
-    <title>Portfolio Professionnel | Site Vitrine HTML5, Tailwind CSS | Aurélien Thébault</title>
+    <title>
+      Portfolio Professionnel | Site Vitrine HTML5, Tailwind CSS | Aurélien
+      Thébault
+    </title>
 
     <!-- Favicon -->
+    <link rel="icon" type="image/png" href="../images/brand/favicon.png?v=2" />
+    <link rel="shortcut icon" href="../images/brand/favicon.png?v=2" />
     <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -122,9 +148,15 @@
         <div class="flex justify-between items-center h-16">
           <a
             href="../index.html"
-            class="text-2xl font-bold text-gray-400 hover:text-white transition-colors"
-            >AT</a
+            class="inline-flex items-center"
+            aria-label="Retour au portfolio"
           >
+            <img
+              src="../images/brand/logo-nom.png"
+              alt="Auvielno"
+              class="h-10 w-auto object-contain"
+              loading="eager"
+          /></a>
           <a
             href="../index.html#projects"
             class="text-gray-300 hover:text-white transition-colors"
