--- a/projects/zetoupanda.html
+++ b/projects/zetoupanda.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
@@ -14,26 +14,51 @@
     />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://aurel1407.github.io/portfolio/projects/zetoupanda.html" />
+    <link
+      rel="canonical"
+      href="https://aurel1407.github.io/portfolio/projects/zetoupanda.html"
+    />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="article" />
     <meta property="og:locale" content="fr_FR" />
-    <meta property="og:title" content="ZetouPanda - Projet E-commerce | Aurélien Thébault" />
-    <meta property="og:description" content="Application e-commerce complète développée en React, TypeScript et Node.js avec gestion de panier, authentification et paiement sécurisé" />
-    <meta property="og:url" content="https://aurel1407.github.io/portfolio/projects/zetoupanda.html" />
-    <meta property="og:image" content="https://aurel1407.github.io/portfolio/images/zetoupanda-logo.svg" />
+    <meta
+      property="og:title"
+      content="ZetouPanda - Projet E-commerce | Aurélien Thébault"
+    />
+    <meta
+      property="og:description"
+      content="Application e-commerce complète développée en React, TypeScript et Node.js avec gestion de panier, authentification et paiement sécurisé"
+    />
+    <meta
+      property="og:url"
+      content="https://aurel1407.github.io/portfolio/projects/zetoupanda.html"
+    />
+    <meta
+      property="og:image"
+      content="https://aurel1407.github.io/portfolio/images/zetoupanda-logo.svg"
+    />
     <meta property="og:site_name" content="Aurélien Thébault Portfolio" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="ZetouPanda - Projet E-commerce" />
-    <meta name="twitter:description" content="Application e-commerce développée en React et Node.js" />
-    <meta name="twitter:image" content="https://aurel1407.github.io/portfolio/images/zetoupanda-logo.svg" />
+    <meta
+      name="twitter:description"
+      content="Application e-commerce développée en React et Node.js"
+    />
+    <meta
+      name="twitter:image"
+      content="https://aurel1407.github.io/portfolio/images/zetoupanda-logo.svg"
+    />
 
-    <title>ZetouPanda | E-commerce React, Node.js, MongoDB | Aurélien Thébault</title>
+    <title>
+      ZetouPanda | E-commerce React, Node.js, MongoDB | Aurélien Thébault
+    </title>
 
     <!-- Favicon -->
+    <link rel="icon" type="image/png" href="../images/brand/favicon.png?v=2" />
+    <link rel="shortcut icon" href="../images/brand/favicon.png?v=2" />
     <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
     <link rel="icon" type="image/x-icon" href="../favicon.ico" />
 
@@ -123,9 +148,15 @@
         <div class="flex justify-between items-center h-16">
           <a
             href="../index.html"
-            class="text-2xl font-bold text-gray-400 hover:text-white transition-colors"
-            >AT</a
+            class="inline-flex items-center"
+            aria-label="Retour au portfolio"
           >
+            <img
+              src="../images/brand/logo-nom.png"
+              alt="Auvielno"
+              class="h-10 w-auto object-contain"
+              loading="eager"
+          /></a>
           <a
             href="../index.html#projects"
             class="text-gray-300 hover:text-white transition-colors"
