chore(seo): aligner OG/Twitter, schema service et sitemap

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     />
     <meta
       property="og:description"
-      content="Portfolio professionnel présentant mes projets et compétences en développement web"
+      content="Développeur web freelance en micro-entreprise à Mayenne : création de site vitrine, refonte et maintenance web pour indépendants, artisans et TPE."
     />
     <meta property="og:url" content="https://aurel1407.github.io/portfolio/" />
     <meta
@@ -42,14 +42,17 @@
       property="og:image:alt"
       content="Photo de profil d'Aurélien Thébault"
     />
-    <meta property="og:site_name" content="Aurélien Thébault Portfolio" />
+    <meta property="og:site_name" content="Auvielno" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Aurélien Thébault - Développeur Web" />
+    <meta
+      name="twitter:title"
+      content="Auvielno - Développeur Web Freelance en Mayenne"
+    />
     <meta
       name="twitter:description"
-      content="Portfolio professionnel de développeur web full-stack"
+      content="Création de sites vitrines, refonte et maintenance web pour indépendants, artisans et TPE."
     />
     <meta
       name="twitter:image"
@@ -104,30 +107,41 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Person",
-        "name": "Aurélien Thébault",
-        "jobTitle": "Développeur Web Freelance",
+        "@type": "ProfessionalService",
+        "name": "Auvielno",
+        "legalName": "Aurélien Thébault",
+        "description": "Développeur web freelance en micro-entreprise à Mayenne. Création de sites vitrines, refonte et maintenance web.",
         "url": "https://aurel1407.github.io/portfolio/",
+        "founder": {
+          "@type": "Person",
+          "name": "Aurélien Thébault"
+        },
+        "image": "https://aurel1407.github.io/portfolio/images/brand/logo-nom.png",
         "sameAs": [
           "https://github.com/Aurel1407",
           "https://www.linkedin.com/in/aurélien-thébault-244b84336"
         ],
+        "areaServed": {
+          "@type": "AdministrativeArea",
+          "name": "Mayenne"
+        },
         "address": {
           "@type": "PostalAddress",
-          "addressLocality": "La Croixille, Mayenne",
+          "streetAddress": "5 Route de Laval",
+          "postalCode": "53380",
+          "addressLocality": "La Croixille",
           "addressCountry": "FR"
         },
-        "description": "Développeur web junior passionné, fraîchement diplômé d'une formation full-stack. Créatif et rigoureux, je donne vie à des projets web modernes.",
         "knowsAbout": [
+          "Création de site vitrine",
+          "Refonte web",
+          "Maintenance web",
           "HTML",
           "CSS",
           "JavaScript",
           "React.js",
           "Node.js",
-          "Tailwind CSS",
-          "MongoDB",
-          "Git",
-          "Docker"
+          "Tailwind CSS"
         ]
       }
     </script>
