feat: migration email vers contact@auvielno.fr

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -353,8 +353,8 @@
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         // Protection de l'email
-        const userParts = ["aurel", "140783"];
-        const domainParts = ["gmail", "com"];
+        const userParts = ["cont", "act"];
+        const domainParts = ["auvielno", "fr"];
         const user = userParts.join("");
         const domain = domainParts.join(".");
         const email = user + "@" + domain;
