seo: aligner URLs et métadonnées sur auvielno.fr

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://aurel1407.github.io/portfolio/" />
+    <link rel="canonical" href="https://auvielno.fr/" />
 
     <!-- Politique de sécurité du contenu -->
     <meta
@@ -33,10 +33,10 @@
       property="og:description"
       content="Développeur web freelance en micro-entreprise à Mayenne : création de site vitrine, refonte et maintenance web pour indépendants, artisans et TPE."
     />
-    <meta property="og:url" content="https://aurel1407.github.io/portfolio/" />
+    <meta property="og:url" content="https://auvielno.fr/" />
     <meta
       property="og:image"
-      content="https://aurel1407.github.io/portfolio/images/profile-photo.jpg"
+      content="https://auvielno.fr/images/profile-photo.jpg"
     />
     <meta
       property="og:image:alt"
@@ -56,7 +56,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://aurel1407.github.io/portfolio/images/profile-photo.jpg"
+      content="https://auvielno.fr/images/profile-photo.jpg"
     />
     <meta
       name="twitter:image:alt"
@@ -109,12 +109,12 @@
         "name": "Auvielno",
         "legalName": "Aurélien Thébault",
         "description": "Développeur web freelance en micro-entreprise à Mayenne. Création de sites vitrines, refonte et maintenance web.",
-        "url": "https://aurel1407.github.io/portfolio/",
+        "url": "https://auvielno.fr/",
         "founder": {
           "@type": "Person",
           "name": "Aurélien Thébault"
         },
-        "image": "https://aurel1407.github.io/portfolio/images/brand/logo-nom.png",
+        "image": "https://auvielno.fr/images/brand/logo-nom.png",
         "sameAs": [
           "https://github.com/Aurel1407",
           "https://www.linkedin.com/in/aurélien-thébault-244b84336"
@@ -1066,7 +1066,7 @@
             >
               <div class="relative overflow-hidden group h-64 flex-shrink-0">
                 <img
-                  src="favicon.svg"
+                  src="images/brand/favicon.png"
                   alt="Logo Portfolio Aurélien Thébault"
                   class="w-full h-full object-contain bg-gradient-to-br from-slate-700 via-slate-600 to-slate-800 transition-transform duration-300 group-hover:scale-110 p-12"
                   loading="lazy"
