--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -12,7 +12,7 @@
     <!-- Canonical URL -->
     <link
       rel="canonical"
-      href="https://aurel1407.github.io/portfolio/mentions-legales.html"
+      href="https://auvielno.fr/mentions-legales.html"
     />
 
     <title>Mentions Légales - Aurélien Thébault</title>
