--- a/projects/zetoupanda.html
+++ b/projects/zetoupanda.html
@@ -16,7 +16,7 @@
     <!-- Canonical URL -->
     <link
       rel="canonical"
-      href="https://aurel1407.github.io/portfolio/projects/zetoupanda.html"
+      href="https://auvielno.fr/projects/zetoupanda.html"
     />
 
     <!-- Open Graph / Facebook -->
@@ -32,11 +32,11 @@
     />
     <meta
       property="og:url"
-      content="https://aurel1407.github.io/portfolio/projects/zetoupanda.html"
+      content="https://auvielno.fr/projects/zetoupanda.html"
     />
     <meta
       property="og:image"
-      content="https://aurel1407.github.io/portfolio/images/zetoupanda-logo.svg"
+      content="https://auvielno.fr/images/zetoupanda-logo.svg"
     />
     <meta property="og:site_name" content="Aurélien Thébault Portfolio" />
 
@@ -49,7 +49,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://aurel1407.github.io/portfolio/images/zetoupanda-logo.svg"
+      content="https://auvielno.fr/images/zetoupanda-logo.svg"
     />
 
     <title>
@@ -101,7 +101,7 @@
         "author": {
           "@type": "Person",
           "name": "Aurélien Thébault",
-          "url": "https://aurel1407.github.io/portfolio/"
+          "url": "https://auvielno.fr/"
         },
         "programmingLanguage": ["React", "TypeScript", "Node.js", "JavaScript"],
         "datePublished": "2024"
@@ -118,19 +118,19 @@
             "@type": "ListItem",
             "position": 1,
             "name": "Accueil",
-            "item": "https://aurel1407.github.io/portfolio/"
+            "item": "https://auvielno.fr/"
           },
           {
             "@type": "ListItem",
             "position": 2,
             "name": "Projets",
-            "item": "https://aurel1407.github.io/portfolio/#projects"
+            "item": "https://auvielno.fr/#projects"
           },
           {
             "@type": "ListItem",
             "position": 3,
             "name": "ZetouPanda",
-            "item": "https://aurel1407.github.io/portfolio/projects/zetoupanda.html"
+            "item": "https://auvielno.fr/projects/zetoupanda.html"
           }
         ]
       }
