--- a/projects/climatserv17.html
+++ b/projects/climatserv17.html
@@ -15,7 +15,7 @@
 
     <link
       rel="canonical"
-      href="https://aurel1407.github.io/portfolio/projects/climatserv17.html"
+      href="https://auvielno.fr/projects/climatserv17.html"
     />
 
     <meta property="og:type" content="article" />
@@ -30,11 +30,11 @@
     />
     <meta
       property="og:url"
-      content="https://aurel1407.github.io/portfolio/projects/climatserv17.html"
+      content="https://auvielno.fr/projects/climatserv17.html"
     />
     <meta
       property="og:image"
-      content="https://aurel1407.github.io/portfolio/ClimatServ17/public/images/clim-hero.webp"
+      content="https://auvielno.fr/ClimatServ17/public/images/clim-hero.webp"
     />
 
     <title>
