--- a/projects/portfolio.html
+++ b/projects/portfolio.html
@@ -16,7 +16,7 @@
     <!-- Canonical URL -->
     <link
       rel="canonical"
-      href="https://aurel1407.github.io/portfolio/projects/portfolio.html"
+      href="https://auvielno.fr/projects/portfolio.html"
     />
 
     <!-- Open Graph / Facebook -->
@@ -32,11 +32,11 @@
     />
     <meta
       property="og:url"
-      content="https://aurel1407.github.io/portfolio/projects/portfolio.html"
+      content="https://auvielno.fr/projects/portfolio.html"
     />
     <meta
       property="og:image"
-      content="https://aurel1407.github.io/portfolio/images/profile-photo.jpg"
+      content="https://auvielno.fr/images/profile-photo.jpg"
     />
     <meta property="og:site_name" content="Aurélien Thébault Portfolio" />
 
@@ -49,7 +49,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://aurel1407.github.io/portfolio/images/profile-photo.jpg"
+      content="https://auvielno.fr/images/profile-photo.jpg"
     />
 
     <title>
@@ -97,11 +97,11 @@
         "@type": "WebSite",
         "name": "Portfolio Aurélien Thébault",
         "description": "Site portfolio professionnel développé avec HTML5, Tailwind CSS et JavaScript avec design moderne et animations fluides",
-        "url": "https://aurel1407.github.io/portfolio/",
+        "url": "https://auvielno.fr/",
         "author": {
           "@type": "Person",
           "name": "Aurélien Thébault",
-          "url": "https://aurel1407.github.io/portfolio/"
+          "url": "https://auvielno.fr/"
         },
         "programmingLanguage": ["HTML5", "CSS3", "JavaScript", "Tailwind CSS"],
         "datePublished": "2024"
@@ -118,19 +118,19 @@
             "@type": "ListItem",
             "position": 1,
             "name": "Accueil",
-            "item": "https://aurel1407.github.io/portfolio/"
+            "item": "https://auvielno.fr/"
           },
           {
             "@type": "ListItem",
             "position": 2,
             "name": "Projets",
-            "item": "https://aurel1407.github.io/portfolio/#projects"
+            "item": "https://auvielno.fr/#projects"
           },
           {
             "@type": "ListItem",
             "position": 3,
             "name": "Portfolio",
-            "item": "https://aurel1407.github.io/portfolio/projects/portfolio.html"
+            "item": "https://auvielno.fr/projects/portfolio.html"
           }
         ]
       }
@@ -174,7 +174,7 @@
           <div
             class="inline-block p-4 bg-gradient-to-br from-gray-800 via-gray-700 to-gray-800 rounded-2xl mb-6"
           >
-            <img src="../favicon.svg" alt="Logo Portfolio" class="w-32 h-32" />
+            <img src="../images/brand/favicon.png" alt="Logo Portfolio" class="w-32 h-32" />
           </div>
           <h1 class="text-4xl md:text-5xl font-bold text-white mb-4">
             Portfolio Professionnel
@@ -592,7 +592,7 @@
               Voir le code source
             </a>
             <a
-              href="https://aurel1407.github.io/portfolio/"
+              href="https://auvielno.fr/"
               target="_blank"
               rel="noopener noreferrer"
               class="inline-flex items-center px-6 py-3 bg-gray-700 text-white rounded-xl hover:bg-gray-600 transition-colors"
