--- a/projects/shuno.html
+++ b/projects/shuno.html
@@ -16,7 +16,7 @@
     <!-- Canonical URL -->
     <link
       rel="canonical"
-      href="https://aurel1407.github.io/portfolio/projects/shuno.html"
+      href="https://auvielno.fr/projects/shuno.html"
     />
 
     <!-- Open Graph / Facebook -->
@@ -32,11 +32,11 @@
     />
     <meta
       property="og:url"
-      content="https://aurel1407.github.io/portfolio/projects/shuno.html"
+      content="https://auvielno.fr/projects/shuno.html"
     />
     <meta
       property="og:image"
-      content="https://aurel1407.github.io/portfolio/images/shuno-logo.svg"
+      content="https://auvielno.fr/images/shuno-logo.svg"
     />
     <meta property="og:site_name" content="Aurélien Thébault Portfolio" />
 
@@ -49,7 +49,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://aurel1407.github.io/portfolio/images/shuno-logo.svg"
+      content="https://auvielno.fr/images/shuno-logo.svg"
     />
 
     <title>
@@ -102,7 +102,7 @@
         "author": {
           "@type": "Person",
           "name": "Aurélien Thébault",
-          "url": "https://aurel1407.github.io/portfolio/"
+          "url": "https://auvielno.fr/"
         },
         "programmingLanguage": [
           "React",
@@ -124,19 +124,19 @@
             "@type": "ListItem",
             "position": 1,
             "name": "Accueil",
-            "item": "https://aurel1407.github.io/portfolio/"
+            "item": "https://auvielno.fr/"
           },
           {
             "@type": "ListItem",
             "position": 2,
             "name": "Projets",
-            "item": "https://aurel1407.github.io/portfolio/#projects"
+            "item": "https://auvielno.fr/#projects"
           },
           {
             "@type": "ListItem",
             "position": 3,
             "name": "Shu-no",
-            "item": "https://aurel1407.github.io/portfolio/projects/shuno.html"
+            "item": "https://auvielno.fr/projects/shuno.html"
           }
         ]
       }
