seo: renforcer conversion et données structurées home

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Portfolio professionnel d'Aurélien Thébault, développeur web freelance en micro-entreprise à Mayenne. Création de sites vitrines, refonte et maintenance web pour indépendants, artisans et TPE."
+      content="Auvielno, développeur web freelance en Mayenne : création de site vitrine, refonte et maintenance pour artisans, indépendants et TPE. Devis gratuit sous 24 à 48h."
     />
     <meta name="author" content="Aurélien Thébault" />
     <meta
       name="keywords"
-      content="Aurélien Thébault, développeur web freelance, micro-entreprise, entrepreneur individuel, création site vitrine, refonte site web, maintenance web, développeur Mayenne, développeur La Croixille, React, Node.js, JavaScript, TypeScript"
+      content="Auvielno, développeur web freelance, micro-entreprise, création site vitrine, refonte site web, maintenance web, devis site internet, artisan, TPE, Mayenne, La Croixille"
+    />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
     />
 
     <!-- Canonical URL -->
@@ -27,11 +31,11 @@
     <meta property="og:locale" content="fr_FR" />
     <meta
       property="og:title"
-      content="Aurélien Thébault - Développeur Web Freelance"
+      content="Auvielno - Création de sites web freelance en Mayenne"
     />
     <meta
       property="og:description"
-      content="Développeur web freelance en micro-entreprise à Mayenne : création de site vitrine, refonte et maintenance web pour indépendants, artisans et TPE."
+      content="Création de site vitrine, refonte et maintenance web pour artisans, indépendants et TPE. Devis gratuit sous 24 à 48h."
     />
     <meta property="og:url" content="https://auvielno.fr/" />
     <meta
@@ -48,11 +52,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Auvielno - Développeur Web Freelance en Mayenne"
+      content="Auvielno - Création de sites web freelance en Mayenne"
     />
     <meta
       name="twitter:description"
-      content="Création de sites vitrines, refonte et maintenance web pour indépendants, artisans et TPE."
+      content="Création de site vitrine, refonte et maintenance web pour artisans, indépendants et TPE. Devis gratuit sous 24 à 48h."
     />
     <meta
       name="twitter:image"
@@ -74,9 +78,7 @@
     <!-- Humans.txt -->
     <link rel="author" href="humans.txt" />
 
-    <title>
-      Aurélien Thébault - Développeur Web Freelance | Micro-entreprise
-    </title>
+    <title>Auvielno - Développeur Web Freelance en Mayenne | Devis Gratuit</title>
 
     <!-- CDN Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -110,6 +112,7 @@
         "legalName": "Aurélien Thébault",
         "description": "Développeur web freelance en micro-entreprise à Mayenne. Création de sites vitrines, refonte et maintenance web.",
         "url": "https://auvielno.fr/",
+        "email": "contact@auvielno.fr",
         "founder": {
           "@type": "Person",
           "name": "Aurélien Thébault"
@@ -129,6 +132,13 @@
           "postalCode": "53380",
           "addressLocality": "La Croixille",
           "addressCountry": "FR"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "customer support",
+          "email": "contact@auvielno.fr",
+          "areaServed": "FR",
+          "availableLanguage": ["French"]
         },
         "knowsAbout": [
           "Création de site vitrine",
